--- a/src/styles/bootstrap-custom.sass
+++ b/src/styles/bootstrap-custom.sass
@@ -15,11 +15,11 @@
 
 // Core CSS
 // @import "~bootstrap/scaffolding";
-// @import "~bootstrap/type";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/type";
 // @import "~bootstrap/code";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/grid";
 // @import "~bootstrap/tables";
-// @import "~bootstrap/forms";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
