Refactor Lobby page

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,8 +6,23 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
 $small-spinner-size: 28px
 
+*
+  box-sizing: border-box
+
 .app
   padding-top: 50px
+
+.lobby
+  text-align: center
+
+.link
+  display: inline-table
+  margin-top: 20px
+  width: 330px
+  input[type="text"]
+    background-color: #FFF
+  .copy-btn
+    cursor: pointer
 
 .spinner
   display: inline-block
