--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -24,6 +24,23 @@ $small-spinner-size: 28px
   .copy-btn
     cursor: pointer
 
+.field
+  margin: 0 auto
+  border-spacing: 4px
+  td
+    height: 48px
+    width: 48px
+    padding: 8px
+    border: 1px solid black
+  tr:first-child td
+    border-top: 0
+  tr:last-child td
+    border-bottom: 0
+  tr td:first-child
+    border-left: 0
+  tr td:last-child
+    border-right: 0
+    
 .spinner
   display: inline-block
   background-image: url("../images/spinner.gif")
