--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -25,22 +25,15 @@ $small-spinner-size: 28px
     cursor: pointer
 
 .field
-  margin: 0 auto
-  border-spacing: 4px
-  td
-    height: 48px
-    width: 48px
-    padding: 8px
-    border: 1px solid black
-  tr:first-child td
-    border-top: 0
-  tr:last-child td
-    border-bottom: 0
-  tr td:first-child
-    border-left: 0
-  tr td:last-child
-    border-right: 0
-    
+  @extend .container
+  width: 300px
+
+.cell
+  @extend .col-xs-4
+  height: 95px
+  padding: 8px
+  border: 1px solid #000
+
 .spinner
   display: inline-block
   background-image: url("../images/spinner.gif")
