--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -67,6 +67,11 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
     stroke-dashoffset: 1000
     animation: dash 2s linear forwards
 
+.toolbar
+  margin-top: 20px
+  a
+    text-decoration: none
+
 @keyframes dash
   to
     stroke-dashoffset: 0
