--- a/src/styles/bootstrap-custom.sass
+++ b/src/styles/bootstrap-custom.sass
@@ -25,7 +25,7 @@
 // Components
 // @import "~bootstrap/component-animations";
 // @import "~bootstrap/dropdowns";
-// @import "~bootstrap/button-groups";
+@import "~bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
 // @import "~bootstrap/navs";
 // @import "~bootstrap/navbar";
