--- a/src/styles/bootstrap-custom.sass
+++ b/src/styles/bootstrap-custom.sass
@@ -11,7 +11,7 @@
 // Reset and dependencies
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/normalize";
 // @import "~bootstrap-sass/assets/stylesheets/bootstrap/print";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
+//@import "~bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Core CSS
 // @import "~bootstrap/scaffolding";
@@ -34,12 +34,12 @@
 // @import "~bootstrap/pager";
 // @import "~bootstrap/labels";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/badges";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
+//@import "~bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
 // @import "~bootstrap/thumbnails";
 // @import "~bootstrap/alerts";
 // @import "~bootstrap/progress-bars";
 // @import "~bootstrap/media";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap/list-group";
+//@import "~bootstrap-sass/assets/stylesheets/bootstrap/list-group";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap/panels";
 // @import "~bootstrap/responsive-embed";
 // @import "~bootstrap/wells";
